src/objects/User.object
<CustomObject>
    <fields>
        <fullName>rdcc__Company_Search_Columns__c</fullName>
        <label>Company Search Columns</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rdcc__Contact_Search_Columns__c</fullName>
        <label>Contact Search Columns</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rdcc__Default_Company_List_View__c</fullName>
        <label>Default Company List View</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rdcc__Default_Contact_List_View__c</fullName>
        <label>Default Contact List View</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rdcc__Default_Project_List_View__c</fullName>
        <label>Default Project List View</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rdcc__My_Project_Search_Columns__c</fullName>
        <description>This field contains all the columns names saved for the user on the My Insight Project Tab.</description>
        <label>My Project Search Columns</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rdcc__Project_Search_Columns__c</fullName>
        <label>Project Search Columns</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rdcc__Real_Time_Company_Search_Columns__c</fullName>
        <label>Real Time Company Search Columns</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rdcc__Real_Time_Project_Search_Columns__c</fullName>
        <label>Real Time Project Search Columns</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>